2025-09-13  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha04 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha04: Guava cream-cheese danish';git push
	git tag -a 5.3.5-alpha04 -m 'all: Fix OpenMP with GCC at DOE HPCs; ncremap/ncclimo: update docs; ncks: __GNUC__ token not __GNUG__';git push --tags

	* OpenMP now works as expected on MacOS, Linux, and at DOE HPCCs

	* #undef NCO_OPENMP_DEFINED before using it for OpenMP pragmas

	* Refactor OpenMP diagnostics for vertical and horizontal

	* ncremap: quiet renormalization file-opening debug output

2025-09-12  Charlie Zender  <zender@uci.edu>

	* ncremap: quiet renormalization configuration debug output

2025-09-11  Charlie Zender  <zender@uci.edu>

	* Update ncremap/ncclimo self-documentation

	* Clarify --thr_nbr option in ncremap Conflluence page

2025-09-07  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha03: Bodkin';git push
	git tag -a 5.3.5-alpha03 -m 'all: --var_lst = --variables = -v;	ncks/ncremap: dgn bad row/col';git push --tags

	* ncks: Diagnose and count bad values of row, col, then exit() in nco_rgr_wgt()

2025-09-05  Charlie Zender  <zender@uci.edu>

	* ncks: Diagnose and count bad values of row, col, then exit() in nco_map_chk()

	* ncks: Add extra diagnostics to mask_a/b in nco_map_chk()

	* all: Add --var_lst as synonym to -v and --variables

	* ncclimo: Additional debug information when ncks cannot link

2025-09-04  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha03: Bodkin';git push
	git tag -a 5.3.5-alpha03 -m 'all: ';git push --tags

	* ncclimo/ncremap: Add ~/anaconda/lib to LD_LIBRARY_PATH for Chrysalis, Perlmutter

2025-09-03  Charlie Zender  <zender@uci.edu>

	* NCO 5.3.5-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha02: Iron Champs 2nd Place';git push