@@ -1,5 +1,9 @@
 2025-09-13  Charlie Zender  <zender@uci.edu>
 
+	* NCO 5.3.5-alpha05 release procedure:
+	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha05: Ally Maz and Nicole Wild';git push
+	git tag -a 5.3.5-alpha05 -m '';git push --tags
+
 	* NCO 5.3.5-alpha04 release procedure:
 	cd ~/nco;git commit -a -m 'Version 5.3.5-alpha04: Guava cream-cheese danish';git push
 	git tag -a 5.3.5-alpha04 -m 'all: Fix OpenMP with GCC at DOE HPCs; ncremap/ncclimo: update docs; ncks: __GNUC__ token not __GNUG__';git push --tags
